feat(WSC-1319): Implement meeting recording (#44)